# mpc_node

./: CMakeLists.txt  package.xml  readme.md
data/: ThetaMdl_LUT.csv  ref_10L.csv  ref_10R.csv  ref_11L.csv  ref_11R.csv  ref_12L.csv  ref_12R.csv  ref_1L.csv  ref_1R.csv  ref_2L.csv  ref_2R.csv  ref_3L.csv  ref_3R.csv  ref_4L.csv  ref_4R.csv  ref_5L.csv  ref_5R.csv  ref_6L.csv  ref_6R.csv  ref_7L.csv  ref_7R.csv  ref_8L.csv  ref_8R.csv  ref_9L.csv  ref_9R.csv
include/: general_functions.h  model_functions.h  mpc_functions.h
launch/: execute_cartesian_traj.launch  execute_closedloop_rt.launch  mpc_cl_node.launch  mpc_rt_nodes.launch  read_traj_node.launch
msg/: HorizonControls.msg  OptiData.msg  TwoPoints.msg  TwoPoses.msg
results/session_2021_07_08/: cl1_calibration1.bag  cl2_calibration2.bag  cl5_calibration5.bag  cl6_calibration6.bag
results/session_2021_07_14/: cl10_traj12_ts15_hp30_feedback_w10.bag  cl10_traj12_ts20_hp25_feedback_w10.bag  cl10_traj12_ts25_hp20_feedback_w10.bag  cl1_calibration1.bag  cl2_calibration2.bag  cl3_traj10_ts25_hp20_feedback_w50_FAIL.bag  cl4_traj10_ts25_hp20_feedback_w40_FAIL.bag  cl5_calibration5.bag  cl6_calibration6.bag  cl6_traj10_ts25_hp20_feedback_w30.bag  cl7_calibration7.bag  cl8_calibration8.bag  cl8_traj10_ts15_hp30_feedback_w20.bag  cl8_traj10_ts20_hp25_feedback_w20.bag  cl9_calibration9.bag  cl9_traj10_ts10_hp25_feedback_w20.bag  cl9_traj10_ts10_hp30_feedback_w20.bag
results/session_2021_07_15/: cl1_calibration.bag  cl1_traj12_ts25_hp20_w0.bag  cl2_calibration.bag  cl3_calibration_GMA.bag  cl3_traj10_ts10_hp25_w25.bag  cl3_traj10_ts10_hp30_w30.bag  cl3_traj10_ts10_hp30_w50.bag  cl3_traj10_ts15_hp25_w25.bag  cl3_traj10_ts15_hp30_w50.bag  cl4_calibration_MA.bag  cl4_traj10_ts10_hp30_w50.bag  cl4_traj10_ts15_hp30_w50.bag  cl5_calibration_EMA.bag  cl5_traj10_ts10_hp30_w50.bag  cl5_traj10_ts15_hp30_w50.bag  cl6_calibration_MA.bag  cl6_traj10_ts15_hp30_w50_DistVision.bag
src/: activate_action.sh  general_functions.cpp  model_functions.cpp  mpc_cl_node.cpp  mpc_functions.cpp  mpc_opti_node.cpp  mpc_rt_node.cpp  read_node.cpp
